# MuDeer2

./: .gitignore  MANIFEST.in  README.md  setup.cfg
etc/: config.default.cfg
mudeer/: __init__.py  main.py  process.py
mudeer/com/: com_types.py  mumble.py  telegram.py
mudeer/skills/: __init__.py  basic_skill.py  channel.py  online.py  weisheiten.py
mudeer/voice/: voice_deep_speech.py
