[metadata]
name = mudeer
version = 0.2
description =  MuDeer - A Mumble bot using DeepSpeech for voice recognition 
long_description = file: README.md
keywords = Mumble, DeepSpeech
license = 
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
install_requires = 
    pymumble
    deepspeech >= 0.9
    numpy
    scipy
    python-telegram-bot
    ffmpeg-python
packages = find:
include_package_data = True

# [options.data_files]
# /etc/mudeer =
#     mudeer/etc/config.cfg

[options.entry_points]
console_scripts =
    mudeer = mudeer:main


[pycodestyle]
max_line_length = 120
indent-size = 4

[flake8]
max_line_length = 120

[tool:pytest]
addopts = -ra
